
Wed Jul 12 12:31:51 EDT 1995	Paul Park	(pjpark@mit.edu)
	* configure.in - Remove V5_USE_SHARED_LIB


Fri Jul 7 16:37:54 EDT 1995	Paul Park	(pjpark@mit.edu)
	* Makefile.in - Remove explicit library handling and LDFLAGS.
	* configure.in - Add KRB5_LIBRARIES and V5_USE_SHARED_LIB.


Thu Jun 22 12:02:48 EDT 1995	Paul Park	(pjpark@mit.edu)
	* kdc5_hammer.c - Change generation of server principals so that
		we can use kdc5_hammer with kdb5_mkdums.  Also add logic
		to time these operations.


Sat Jun 10 23:08:04 1995  Tom Yu  (tlyu@dragons-lair)

	* kdc5_hammer.c: krb5_auth_context redefinitions

Fri Jun  9 18:58:36 1995    <tytso@rsx-11.mit.edu>

	* configure.in: Remove standardized set of autoconf macros, which
		are now handled by CONFIG_RULES.

Thu Apr 20 13:06:53 1995  Ezra Peisach  <epeisach@kangaroo.mit.edu>

	* kdc_hammer.c (usage()): Removed -M as not used.
	               (main()): Add missing option to getopt call. 
		       On exit, close the ccache, free context, and exit
		       with status set to number of errors encountered.

Mon Mar 27 07:56:26 1995 Chris Provenzano (proven@mit.edu)

        * kdc5_hammer.c (verify_cs_pair()): Use new calling conventions 
		for krb5_rd_req() and krb5_mk_req_extended(),

Fri Mar 24 14:52:03 1995    <tytso@rsx-11.mit.edu>

	* kdc5_hammer.c (get_tgt): Remove the call to krb5_os_localaddr()
		since get_in_tkt_XXXX will default appropriately.

Thu Mar  2 12:34:23 1995  Theodore Y. Ts'o  <tytso@dcl>

	* Makefile.in (ISODELIB): Remove reference to $(ISODELIB).

Wed Mar  1 16:32:38 1995  Theodore Y. Ts'o  <tytso@dcl>

	* configure.in: Remove ISODE_INCLUDE, replace check for -lsocket
		and -lnsl with WITH_NETLIB check.

Tue Feb 28 01:25:13 1995  John Gilmore  (gnu at toad.com)

	* kdc5_hammer.c, pp.c:  Avoid <krb5/...> includes.

Mon Feb 06 17:19:04 1995 Chris Provenzano  (proven@mit.edu)

        * kdc5_hammer.c Removed krb5_keytype, changed krb5_enctype to